Fix the edit record to match new style

--- a/template/base.css
+++ b/template/base.css
@@ -1,4 +1,11 @@
 /************************************************/
+/**               Overrides                    **/
+/************************************************/
+table tr { 
+        vertical-align:top;
+}
+
+/************************************************/
 /**               View Table                   **/
 /************************************************/
 
