- Update 'view' of record, and switch clicking of link on records/ to records/view/# - Update content allowing it to better handle qrcode images

--- a/template/base.css
+++ b/template/base.css
@@ -4,6 +4,9 @@
 table tr { 
         vertical-align:top;
 }
+table.table-white {
+        background-color:#fff;
+}
 
 /************************************************/
 /**               View Table                   **/
