- Add QRcode image to record view - /media now references image.php

--- a/template/base.css
+++ b/template/base.css
@@ -48,8 +48,10 @@ div.table-cell {
 	margin-top: 10px; 
         padding:5px; 
 } 
-/* Images */
-.image-block { 
-	margin: 10px;
-	float:left; 
-} 
+.record-header-left {
+        float:left;
+        height:152px;
+}
+.record-header-right {
+        height:152px;
+}
