Re-format new record form

--- a/template/base.css
+++ b/template/base.css
@@ -42,7 +42,7 @@ div.table-cell {
 	width:1000px;
 } 
 .content-block {
-	background-color:#C2D1F0;
+	background-color:#F2FBEF;
 	border:1px solid #AABFE9;
 	border-radius: 4px; 
 	margin-top: 10px; 
